[tool.poetry]
name = "timeseries-cv"
version = "0.1.4"
description = "Timeseries cross-validation for Neural Networks"
authors = ["didier <dro.lopes@campus.fct.unl.pt>"]
license = "MIT License"
packages = [
    { include = "tsxv" },
]
readme = "README.md"
repository = "https://github.com/DidierRLopes/timeseries-cv"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "~1.19.5,<1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
